--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,16 @@
     transform: rotate(360deg);
   }
 }
+
+.main-page {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.avatar {
+  width: 290px;
+  height: 290px;
+  margin-bottom: 8px;
+}
